--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="quiz-container">
+    <div class="quiz-container" id="quiz">
         <div class="quiz-header">
             <h2 id="question"></h2>
             <ul>
