[NEW] new button for start added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="firstPage-container">
+        <div class="button-container">
+            <h3>Are You Ready !</h3>
+            <button id="to-quiz">Start</button>
+        </div>
+    </div>
     <div class="quiz-container" id="quiz">
         <div class="quiz-header">
             <h2 id="question"></h2>
