--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
             <h2 id="question"></h2>
             <ul>
                 <li>
-                    <input type="radio" name="answer" id="a" class="answer">
+                    <input type="radio" name="answer" id="A" class="answer">
                     <label for="a" id="a_text">Answer</label>
                 </li>
                 <li>
-                    <input type="radio" name="answer" id="b" class="answer">
+                    <input type="radio" name="answer" id="B" class="answer">
                     <label for="b" id="b_text">Answer</label>
                 </li>
                 <li>
-                    <input type="radio" name="answer" id="c" class="answer">
+                    <input type="radio" name="answer" id="C" class="answer">
                     <label for="c" id="c_text">Answer</label>
                 </li>
                 <li>
-                    <input type="radio" name="answer" id="d" class="answer">
+                    <input type="radio" name="answer" id="D" class="answer">
                     <label for="d" id="d_text">Answer</label>
                 </li>
             </ul>
